# FocusEmptySpaceWriter

./: .gitignore  LICENSE.txt  Makefile  README.md  clean.py  focus-empty-space-writer.spec  pyproject.toml
assets/: create_icon.py  icon.icns
src/: FocusSpace.py  main.py  settings.json
tests/: test_app.py
